  not per word, so if any word is flagged as a substring match, the whole 
  search is. Otherwise, it's a full word match.

* Fix bug that prevented multiple-field searches from working, e.g.
  sf=15:16:17:18.

* Add table to [import] error message.

* Controlling Interchange (add,remove,jobs) doesn't stop despite of a 
  stale PID file and kills the script it runs from (Debian bug #256093)

UI
--

* Escape HTML tags within ITL test code output.

* Customer Mailing added to edit permissions page.

* Fix the long-standing "page [cgi mv_data_table] not found" error on
  return from meta_editor.

* Display "New item" in the HTML title of the item editor for new items.

Menu
----

* Allow "Create menu from HTML" option to recognize <OPTION value=URL>Anchor
  lists.

UserTag
-------

* Make secure image directory be set to something even if no
  separate secure image directory within [image] UserTag.

* [jsq]/[jsqn] returns now the string '' if an empty string is the argument
  in order to avoid JavaScript errors (found by John Rennie)

* Changes related to the makesize= parameter of [image] UserTag:

  - Added resize= and geometry= aliases

  - Expanded a regex, which only accepted an AxB size specification,
    to permit complete format that mogrify supports:

    AxB, A or xB, followed by up to two +-number offsets, followed by
    none or one of @!%><.

    URLs have the "%" character encoded: % = %25

Foundation
----------

* Void mv_form_profile on changing shipping country in account page.

Payment
-------

* New Ezic module supplied by Mark Lipscombe <markl@gasupnow.com>.

* New Business::OnlinePayment interface contributed by Ivan Kohler. See
  http://420.am/business-onlinepayment/ for available modules.

i18n
----

* Continued translation of UI.

* Update of Italian UI translation thanks to Marco Mescoli
  <m.mescoli@omnibit.nu>.

Link
----

* Add Interchange::Link (mod_perl 1.99/2.0 link program) by Mike Heins, which