@@ -60,6 +60,9 @@ Core
 * Controlling Interchange (add,remove,jobs) doesn't stop despite of a 
   stale PID file and kills the script it runs from (Debian bug #256093)
 
+* Fix bug that prevented the use of "<filename" to slurp configuration contents
+  from a file.
+  
 UI
 --
 
